<resources>
    <string name="app_name">Paper Melody</string>
    <string name="play_listen">试听</string>
    <string name="pause">暂停</string>
    <string name="conti">继续</string>
    <string name="stop">停止</string>
    <string name="calibration_notice">请将琴谱完全放置于矩形选定框内</string>
    <string name="quit_save">放弃上传</string>
    <string name="play_start">播放</string>
    <string name="cali_yes">完成标定</string>
    <string name="cali_no">重新标定</string>

    <string name="comment">评论</string>
    <string name="zero">0</string>
    <string name="view_count">浏览次数</string>
    <string name="vote_count">赞</string>
    <string name="edit_music_title">音乐名称</string>
    <string name="edit_music_des" translatable="false">说点什么</string>
    <string name="submit">提交</string>
    <string name="browse">浏览</string>
    <string name="upload">上传</string>
    <string name="upload_success">上传成功</string>
    <string name="download_success">下载完成</string>
    <string name="download_failed">下载失败</string>
    <string name="upload_failed">上传失败T.T</string>
    <string name="play_over">弹奏结束</string>
    <string name="re_play">重新弹奏</string>
    <string name="confirm_quit">确定要放弃保存和上传吗？</string>
    <string name="confirm_quit_upload">确定要放弃上传吗？</string>
    <string name="tip_download_before">先下载才能播放哦</string>
    <string name="save_to_local">保存到本地</string>
    <string name="save_success">保存成功</string>
    <string name="picture">图片</string>
    <string name="downloading">下载中……</string>
    <string name="file_exist">文件已经存在啦</string>
    <string name="save_and_play">下载并播放</string>
    <string name="re_save">重新下载</string>
    <string name="unable_to_play">暂时无法播放T.T</string>

    <!--写ip地址要在结尾加一个“/”-->

    <string name="server_ip">http://123.207.249.92/</string>
    <!--<string name="server_ip">http://192.168.0.102/</string>-->
    <!--<string name="server_ip">http://192.168.137.183/</string>-->
    <!--<string name="server_ip">http://10.185.245.166:8080/</string>-->

    <string name="tab_mode">开始演奏</string>
    <string name="tab_settings">设置</string>
    <string name="tab_music_hall">音乐圈</string>
    <string name="tab_user">用户管理</string>
    <string name="mode_free">自由模式</string>
    <string name="mode_opern">跟谱模式</string>
    <string name="settings_play">演奏设置</string>
    <string name="settings_privacy">账号与隐私</string>
    <string name="about">关于</string>
    <string name="view_tutorial">浏览教程</string>
    <string name="user_info">用户信息</string>
    <string name="user_msg">消息通知</string>
    <string name="over99">99+</string>
    <string name="jackMa">马云</string>
    <string name="release">发布了</string>
    <string name="listen_first">先点击播放听听再做决定哦</string>
    <string name="avatar">头像</string>
    <string name="select_avatar">选择头像</string>
    <string name="edit_nickname">修改昵称</string>
    <string name="old_password">旧密码</string>
    <string name="old_password_wrong">请正确输入旧密码</string>
    <string name="new_password">新密码</string>
    <string name="nickname">昵称</string>
    <string name="user_name">用户名</string>
    <string name="reply_to_you">回复了你：</string>
    <string name="message_sample">小伙子很有前途！</string>
    <string name="history_musics">历史作品</string>
    <string name="upload_musics">上传作品</string>
    <string name="favorite_musics">收藏作品</string>
    <string name="user_log_in">登录</string>
    <string name="user_log_out">注销</string>
    <string name="un_log_in">未登录</string>
    <string name="log_in">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确定</string>
    <string name="choose_instrument">请选择一种乐器</string>
    <string name="cancel">取消</string>
    <string name="mode">模式：</string>
    <string name="instrument">乐器：</string>
    <string name="opern">曲谱：</string>
    <string name="piano_with_21_keys_c3_to_b5">21键钢琴 C3-B5</string>
    <string name="piano_with_21_keys_c4_to_b6">21键钢琴 C4-B6</string>
    <string name="piano_with_14_keys_c3_to_b4">14键钢琴 C3-B4</string>
    <string name="piano_with_14_keys_c4_to_b5">14键钢琴 C4-B5</string>
    <string name="flute_with_7_holes">7孔笛子</string>
    <string-array name="spinner_instrument">
        <item>钢琴</item>
        <item>笛子</item>
    </string-array>
    <string-array name="spinner_category_piano">
        <item>15键钢琴</item>
        <item>21键钢琴</item>
    </string-array>
    <string-array name="spinner_category_flute">
        <item>7孔笛</item>
    </string-array>
    <string-array name="spinner_opern">
        <item>蒲公英的约定</item>
        <item>说好的幸福呢</item>
        <item>测试曲谱</item>
    </string-array>
    <string name="network_failure">网络故障</string>
    <string name="wrong_password">密码错误</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="user_already_exist">用户已存在</string>
    <string name="register_success">注册成功</string>

    <string name="name_already_exist">该名称已存在</string>
    <string name="add_new_comment">这首音乐好赞啊！（demo)</string>
    <string name="upload_comment">上传评论</string>
    <string name="calibration_cancel">重新标定</string>
    <string name="calibration_complete">完成标定</string>
    <string name="upload_comment_success">评论上传完成！</string>
    <string name="network_unconnected">网络崩溃啦</string>
    <string name="network_reconnect">重新连接</string>
    <string name="title_activity_online_listen_scrollable">OnlineListenActivityScrollable</string>

    <string name="action_settings">Settings</string>
    <string name="hand_calibration">请将手放于下方标定</string>
    <string name="hand_calibration_over">手指标定完成，录制即将开始</string>

    <string name="login_success">登录成功</string>
    <string name="login">登录</string>
    <string name="register_english">没有账号？去注册</string>
    <string name="go_english">已有账号？去登录</string>
    <string name="Username">用户名</string>
    <string name="less_than_6_chars">不得少于6个字符</string>
    <string name="more_than_20_chars">不得多于20个字符</string>
    <string name="edit_success">修改成功</string>
    <string name="Password">密码</string>
    <string name="password_sample">******</string>
    <string name="forgot_your_password">忘记密码</string>
    <string name="go">登录</string>
    <string name="email">邮箱</string>
    <string name="signature">这个人很懒，什么都没留下(╯°口°)╯(┴—┴</string>
    <string name="repeat_password">确认密码</string>
    <string name="next">NEXT</string>
    <string name="add_new_comment_here">点击此处写下评论</string>
    <string name="user_comment_title">我的最新评论</string>
    <string name="all_comment_title">所有评论</string>
    <string name="user_comment_not_exist">你还没有评论过哦</string>
    <string name="test_long_text">test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1test1</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="not_logged_in">用户尚未登录</string>
    <string name="request_permission">请求申请</string>

    <string-array name="spinner_order_mode">
        <item>默认排序</item>
        <item>按热度</item>
        <item>按点赞数</item>
    </string-array>
    <string name="reply">回复</string>
    <string name="play_settings">演奏设置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_title_all">主要设置</string>
    <string name="developer">开发者</string>
    <string name="others">其他</string>
    <string name="describe_developer">开发者模式的一些高级设置</string>
    <string name="describe_setting_play">演奏设置，如乐器等</string>
    <string name="describe_about">查看本应用的开发详情</string>
    <string name="describe_viewTutorial">查看本应用的使用方法</string>
    <string name="describe_privacy">用户隐私设置</string>
    <string name="license">Open Source Project\nhttps://github.com/hgs1217/Paper-Melody</string>

    <string name="file_wrong_upload">文件不存在或者格式不正确</string>
    <string name="message">消息</string>
    <string name="update_user_info">修改用户信息</string>
    <string name="__label">$REPLY2THIS$</string>
    <string name="__labelForSplit">\\$REPLY2THIS\\$</string>
    <string name="please_choose_instrument">请选择一种乐器开始：</string>
    <string name="piano">钢琴</string>
    <string name="recorder">笛子</string>
    <string name="flute">笛子</string>
    <string name="error">额，请先选择乐器~</string>
    <string name="use_xx_to_play">使用 xx 开始演奏</string>
    <string name="please_choose_music">请选择一首准备弹奏的曲子：</string>
    <string name="errorReadComment">读取评论时好像出错了: (</string>
    <string name="play_time_too_short">时间太短了，再多弹一会儿吧</string>
    <string name="no_comment_now">暂时还没人评论，赶紧抢沙发~</string>
    <string name="sensitivity">识别灵敏度</string>
    <string name="skin_sensi">肤色灵敏度</string>
    <string name="choose_one">请选择</string>
    <string name="motion_sensi">运动灵敏度</string>
    <string name="play_animation">弹奏识别特效</string>
    <string name="high_performance">高性能模式</string>
    <string name="color_sensi">颜色灵敏度</string>
    <string name="personal_displ">个性化显示</string>
    <string name="debug_info_disp">显示调试数据信息</string>
    <string name="performance">性能</string>
    <string name="calibration">校准</string>
    <string name="key_calibration">乐器位置校准设定</string>
    <string-array name="sensitivity_value">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <string-array name="sensitivity_show">
        <item>高</item>
        <item>中</item>
        <item>低</item>
    </string-array>
    <string name="title_activity_position_calibration">PositionCalibrationActivity</string>
    <string name="version">Version 0.9.1</string>
    <string name="chinesename">纸韵</string>
    <string name="test_short_text">TEST</string>
    <string name="main_desciption">开发人员：\n\t胡国盛 周奔 孙随彬 潘宇杰 汤同辉\n\n项目地址：\n\thttps://github.com/hgs1217/Paper-Melody\n\n制作时间：\n\t2017.3-2017.6</string>

</resources>
