<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_upload"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.papermelody.activity.UploadActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="这是UploadActivity" />

    <EditText
        android:id="@+id/edit_music_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_music_title"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/edit_music_des"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/edit_music_des" />

    <ImageView
        android:id="@+id/img_upload"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/btn_upload_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse" />

    <Button
        android:id="@+id/btn_upload_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>
