<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/layout_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_avatar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_select_avatar"
        android:layout_width="200dp"
        android:scaleType="centerCrop"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_avatar_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_avatar_confirm"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>