<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_margin="1dp"
    android:orientation="vertical">
    <!--android:weightSum="1">-->

    <TextView
        android:id="@+id/user_comment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="2sp"
        android:paddingStart="2sp"
        android:text="@string/user_comment_title"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_margin="2sp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/my_comment_icon"
            android:layout_width="40sp"
            android:layout_height="40sp"
            app:srcCompat="@drawable/ic_account_circle_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_comment_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="title"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/my_comment_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="Loading comment time......" />

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/my_comment_context"
                android:layout_marginRight="30sp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAlignment="viewStart"
                android:text="@string/test_long_text"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4sp"></LinearLayout>
    <TextView
        android:id="@+id/user_newest_comment_not_exist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0sp"
        android:layout_marginTop="0sp"
        android:paddingStart="4sp"
        android:text="@string/user_comment_not_exist"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4sp"></LinearLayout>

    <TextView
        android:id="@+id/all_comment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="2sp"
        android:paddingStart="2sp"
        android:text="@string/all_comment_title"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/current_comment_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="6sp"
        android:layout_weight="99999"
        android:fillViewport="true"
        android:paddingLeft="4sp"
        android:paddingRight="4sp"
        android:scrollbarStyle="insideInset" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <EditText
            android:id="@+id/add_new_comment"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_new_comment_here"
            android:inputType="textMultiLine"
            android:textSize="18sp" />

        <Button
            android:id="@+id/upload_comment_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/colorAccent"
            android:text="@string/upload_comment"
            android:textColor="@color/textPrimary"
            android:textSize="12sp" />


    </LinearLayout>


</LinearLayout>
