<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/layout_background"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:foreground="?attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/card_view_background"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/item_text_message_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/jackMa"
                android:textColor="@color/colorPrimaryLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/item_text_message_author"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/item_text_message_author"
                android:text="@string/reply_to_you"
                android:textColor="@color/textSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_text_message_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_text_message_author"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/message_sample"
                android:textColor="@color/textPrimary" />

            <TextView
                android:id="@+id/item_text_message_time"
                android:layout_width="wrap_content"
                android:text="2017-06-15 22:04:33"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:textSize="12sp"
                android:textColor="@color/textSecondary"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>